// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all flights location fallback should return legs data by using locations fallback 1`] = `
Object {
  "data": Object {
    "allFlights": Object {
      "edges": Array [
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMxMzIyNTIxMA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMxMzM1NzM5Ng==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOkVKMjkyODU2MjA4OV80MjE4MDIzODg=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOkVKMjkyODU2MjA4OV8zNTk1MTM3NjU=",
              },
            ],
          },
        },
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOkVKMTU3NDYxODM1M18zMDc5MzkyNjQ=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMxNDMxNjI0MA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMxNjMyODg2OA==",
              },
            ],
          },
        },
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMyMTMzNzkwMw==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMxNDMxNjI0MA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMxNjMyODg2OA==",
              },
            ],
          },
        },
      ],
    },
  },
}
`;

exports[`all flights location fallback should return legs data by using locations fallback with multiple locations 1`] = `
Object {
  "data": Object {
    "allFlights": Object {
      "edges": Array [
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOkVPNjMwMDkxMzUyXzk5MDIwMjY5",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMxNTU4ODMwMw==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMwODM0MTczOA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMwODQzMzk4OA==",
              },
            ],
          },
        },
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOkVUMTIyODM0ODA0Nl8yMjIzOTE0NTA=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOkVUMTIyODM0ODA0Nl8xNzE3MjAyNDA=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMwODM0MTczOA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMwODQzMzk4OA==",
              },
            ],
          },
        },
        Object {
          "node": Object {
            "legs": Array [
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOkVUMjY0MjYyNjU3NF8yMDM4NjUzMzk=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOkVUMjY0MjYyNjU3NF8yMjAyMTc1MzM=",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMwODM0MTczOA==",
              },
              Object {
                "arrival": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "departure": Object {
                  "airport": Object {
                    "city": Object {
                      "name": "Mocked City Name",
                    },
                  },
                },
                "id": "bGVnOjMwODQzMzk4OA==",
              },
            ],
          },
        },
      ],
    },
  },
}
`;
